fix background image not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url('/img/RedDragon.jpg') no-repeat center center fixed;
+    background: url('../img/RedDragon.jpg') no-repeat center center fixed;
     background-size: cover;
     color: aliceblue;
 }
